<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/layout_price_color"
            app:hintTextAppearance="@style/MyAppearance"
            android:background="@drawable/rectangular_stroke_primary">
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/white"
                android:fontFamily="@font/big_pen_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_email"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="@dimen/min_view_padding"
                android:hint="@string/email_login_hint"
                android:inputType="textEmailAddress"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/layout_price_color"
        app:hintTextAppearance="@style/MyAppearance"
        android:background="@drawable/rectangular_stroke_primary"
        android:visibility="gone">
        <com.google.android.material.textfield.TextInputEditText
            android:textColor="@color/white"
            android:fontFamily="@font/big_pen_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_user"
            android:drawableLeft="@drawable/ic_user"
            android:hint="@string/name_login_hint"
            android:inputType="text"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/rectangular_stroke_primary">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColorHint="@color/layout_price_color"
            app:hintTextAppearance="@style/MyAppearance">
            <com.google.android.material.textfield.TextInputEditText
                android:textColor="@color/white"
                android:fontFamily="@font/big_pen_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawableLeft="@drawable/ic_password"
                android:hint="@string/password_login_hint"
                android:inputType="textPassword"
                android:maxLines="1"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/button_hide_look_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@null"
            app:srcCompat="@drawable/ic_eye_look"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/sign_in_login_button"
        android:textAllCaps="false"
        style="@style/ButtonStyle"
        android:background="@drawable/rectangular_shape_primary_dark"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_google"
        android:drawableLeft="@drawable/ic_google"
        android:text="@string/login_with_google_account"
        android:textAllCaps="false"
        style="@style/ButtonStyle"
        android:background="@drawable/rectangular_shape_primary_dark"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_view_padding"
        android:drawableStart="@drawable/ic_facebook"
        android:drawableLeft="@drawable/ic_facebook"
        android:text="@string/login_with_facebook_account"
        android:textAllCaps="false"
        style="@style/ButtonStyle"
        android:background="@drawable/rectangular_shape_primary_dark"/>
    <TextView
        android:id="@+id/text_create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_view_padding"
        android:layout_marginBottom="@dimen/min_view_padding"
        android:gravity="center"
        android:text="@string/create_new_account_login"
        style="@style/TextViewStyle"
        android:textIsSelectable="false" />
    <TextView
        android:id="@+id/text_reset_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/min_view_padding"
        android:gravity="center"
        android:text="@string/reset_pwd_link"
        style="@style/TextViewStyle"
        android:textIsSelectable="false" />
</LinearLayout>