<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/min_view_padding"
    android:background="@color/colorPrimaryDark">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            </View>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:orientation="vertical"
                android:background="@drawable/rectangular_fragment">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/big_pen_font"
                    android:gravity="center"
                    android:textSize="@dimen/dialog_title_size"
                    android:text="@string/developer_name"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:fontFamily="@font/big_pen_font"
                    android:gravity="center"
                    android:drawableStart="@drawable/ic_tun_flg"
                    android:drawableLeft="@drawable/ic_tun_flg"
                    android:textSize="@dimen/dialog_title_size"
                    android:text="@string/tun"/>
            </LinearLayout>
        </LinearLayout>
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/abd"
            app:civ_border_width="@dimen/min_view_padding"
            app:civ_border_color="@color/colorPrimary"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:scrollbarThumbVertical="@color/orange"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="@color/teal"
            android:fontFamily="@font/big_pen_font"
            android:gravity="center_horizontal|top"
            android:textSize="@dimen/button_text_size"
            android:paddingBottom="@dimen/min_view_padding"
            android:text="@string/about_description"/>
    </ScrollView>
</LinearLayout>